--- a/main.html
+++ b/main.html
@@ -3,7 +3,8 @@
 <html>
 
 <head>
-	
+	<meta charset="UTF-8">
+  <title>Semantic Navbar & Audios</title>
 </head>
 
 <body>
@@ -16,7 +17,7 @@
    </nav>
  
    <section>
-     <h1>3 random audios</h1>
+     <h2>3 random audios</h2>
 
      <audio controls>
        <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mp3">
