--- a/main.html
+++ b/main.html
@@ -3,16 +3,30 @@
 <html>
 
 <head>
-	
+	<title>My semantics nd audios</title>
+	<style>
+        /* Add your CSS styles here */
+        nav {
+            background-color: #f2f2f2;
+            padding: 10px;
+        }
+        nav ul {
+            list-style-type: none;
+        }
+        nav li {
+            display: inline;
+            margin-right: 20px;
+        }
+    </style>
 </head>
 
 <body>
 	 <nav>
          <ul>
-             <li><a href="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3">Link 1</a></li>
-             <li><a href="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">Link 2</a></li>
-             <li><a href="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3">Link 3</a></li>
-         </ul>
+			 <li><a href="#home">Home</a></li>
+             <li><a href="#about">About</a></li>
+             <li><a href="#contact">Contact</a></li>
+		 </ul>
      </nav>
 	<section>
     <h2>3 random audios</h2>
