--- a/main.html
+++ b/main.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 
 <head>
-	<title>My semantics nd audios</title>
+	<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Semantic Navbar & Audios</title>
 	<style>
-        /* Add your CSS styles here */
+       
         nav {
             background-color: #f2f2f2;
             padding: 10px;
@@ -23,9 +25,9 @@
 <body>
 	 <nav>
          <ul>
-			 <li><a href="#home">Home</a></li>
-             <li><a href="#about">About</a></li>
-             <li><a href="#contact">Contact</a></li>
+			 <li><a href="#">Link 1</a></li>
+            <li><a href="#">Link 2</a></li>
+            <li><a href="#">Link 3</a></li>
 		 </ul>
      </nav>
 	<section>
