--- a/main.html
+++ b/main.html
@@ -45,8 +45,8 @@
      </audio>
        <br><br>
      <audio controls>
-         <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg">
-         Your browser does not support the audio element.
+        <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/pang/paza-moduless.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
      </audio>
       <br><br>
 	</section>
