--- a/main.html
+++ b/main.html
@@ -1,56 +1,28 @@
 <!DOCTYPE html>
-
 <html lang="en">
-
 <head>
-	<meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Semantic Navbar & Audios</title>
-	<style>
-       
-        nav {
-            background-color: #f2f2f2;
-            padding: 10px;
-        }
-        nav ul {
-            list-style-type: none;
-        }
-        nav li {
-            display: inline;
-            margin-right: 20px;
-        }
-    </style>
+    <title>Semantic Navbar & Audios</title>
 </head>
-
 <body>
-	 <nav>
-         <ul>
-			 <li><a href="#">Link 1</a></li>
-            <li><a href="#">Link 2</a></li>
-            <li><a href="#">Link 3</a></li>
-		 </ul>
-     </nav>
-	<section>
+    <nav>
+        <ul>
+            <li><a href="link1.html">Link 1</a></li>
+            <li><a href="link2.html">Link 2</a></li>
+            <li><a href="link3.html">Link 3</a></li>
+        </ul>
+    </nav>
+    
     <h2>3 random audios</h2>
- 
-     <audio controls>
-         <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">
-         Your browser does not support the audio element.
-     </audio>
-		<br><br>
- 
-     <audio controls>
-         <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
-         Your browser does not support the audio element.
-     </audio>
-       <br><br>
-     <audio controls>
-        <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/pang/paza-moduless.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
-     </audio>
-      <br><br>
-	</section>
- 	
+    <audio controls>
+        <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">
+    </audio>
+    <audio controls>
+        <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+    </audio>
+    <audio controls>
+        <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg">
+    </audio>
 </body>
-
 </html>
